app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eip1559_simple_transfer.json.snap
---
source: src/parser/coreth/native.rs
expression: reduced
input_file: src/parser/coreth/eth_testvectors/eip1559_simple_transfer.json
---
[
    "Chain ID": "2",
    "Transfer": "??? 0.000000004886718345",
    "To": "0x0102030400000000000000000000000000000002",
    "Fee(GWEI)": "0.08",
]
