app/rust/src/parser/coreth/snapshots/rslib__parser__coreth__native__tests__tx_eth_ui@eip1559_uniswap_swap_token_in.json.snap
---
source: src/parser/coreth/native.rs
assertion_line: 416
expression: reduced
input_file: src/parser/coreth/eth_testvectors/eip1559_uniswap_swap_token_in.json
---
[
    "Chain ID": "43114",
    "Contract": "Call",
    "Transfer": "AVAX 0",
    "To": "0x8b844f885672f333bc0042cb669255f93a4c1e6b",
    "Contract Data: ": "0x3593564c0000000000000000000000000000000000000000000000000000...",
    "Maximun Fee(GWEI)": "4518.906562296",
]
